# pytagrelease

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  plan.md  pyproject.toml
.github/workflows/: reproducibility.yml
src/: __init__.py
src/api/: __init__.py  routes.py  schemas.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  match.py  release.py  track.py
src/utils/: __init__.py  exceptions.py  logger.py
tests/: __init__.py
tests/unit/: test_domain_schemas.py  test_health.py  test_settings.py
