[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytagrelease"
version = "0.1.0"
description = "API-first metadata tagging service for MusicBrainz releases"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "DevSollas" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "structlog>=24.1.0,<25.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "mutagen>=1.47.0,<2.0.0",
  "musicbrainzngs>=0.7.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
ignore_missing_imports = true

# Dependency lock strategy:
# Keep version ranges in this file and generate a pinned lock file later
# using your preferred workflow (for example: pip-tools, uv, or poetry export).